force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/ucinn_ascendv2__Disbursement__c.object-meta.xml
<CustomObject>
    <description>Used to pay off multiple Matching Gifts at the same time</description>
    <label>Disbursement</label>
    <nameField>
        <label>Disbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>