force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The associated Organization that is paying the Disbursement.</description>
    <inlineHelpText>The associated Organization that is paying the Disbursement.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>