force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Applied_Amount__c</fullName>
    <description>The sum of the Matching Gift amounts currently applied to this Disbursement.</description>
    <inlineHelpText>The sum of the Matching Gift amounts currently applied to this Disbursement.</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>