force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Date__c</fullName>
    <description>The date used as the credit date for Matching Gift Payments.</description>
    <inlineHelpText>The date used as the credit date for Matching Gift Payments.</inlineHelpText>
    <label>Credit Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Disbursement Date</fullName>
                <default>true</default>
                <label>Disbursement Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>