force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disbursement_Amount__c</fullName>
    <description>The total amount of the Disbursement.</description>
    <inlineHelpText>The total amount of the Disbursement.</inlineHelpText>
    <label>Disbursement Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>