force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disbursement_Date__c</fullName>
    <description>The date of the Disbursement.</description>
    <inlineHelpText>The date of the Disbursement.</inlineHelpText>
    <label>Disbursement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>