force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Disbursement_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disbursement_Reference_Number__c</fullName>
    <description>The reference number of the Disbursement.</description>
    <inlineHelpText>The reference number of the Disbursement.</inlineHelpText>
    <label>Disbursement Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>