force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Is_Close_And_Approve_Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Close_And_Approve_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Session should auto close and approve. Uncheck to leave Session open.</description>
    <inlineHelpText>Check if Session should auto close and approve. Uncheck to leave Session open.</inlineHelpText>
    <label>Close And Approve Session</label>
    <type>Checkbox</type>
</CustomField>