force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Is_Disbursement_Processed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Disbursement_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the Disbursement has already been processed.</description>
    <inlineHelpText>True if the Disbursement has already been processed.</inlineHelpText>
    <label>Disbursement Processed</label>
    <type>Checkbox</type>
</CustomField>