force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Is_Eligible_For_Processing_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Eligible_For_Processing_Formula__c</fullName>
    <formula>ucinn_ascendv2__Applied_Amount__c == ucinn_ascendv2__Disbursement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible For Processing</label>
    <type>Checkbox</type>
</CustomField>