force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Remaining_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Amount_Formula__c</fullName>
    <description>The amount remaining that can be used to pay Matching Gifts for this Disbursement.</description>
    <formula>ucinn_ascendv2__Disbursement_Amount__c - ucinn_ascendv2__Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount remaining that can be used to pay Matching Gifts for this Disbursement.</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>