force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/fields/ucinn_ascendv2__Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type__c</fullName>
    <description>Tender type for all payments in disbursement. Defaults to Check if none is selected.</description>
    <inlineHelpText>Select tender type that will be applied to all payments processed in this disbursement. Defaults to Check if none is selected.</inlineHelpText>
    <label>Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Stock Gift</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>