force-app/main/default/objects/ucinn_ascendv2__Disbursement__c/listViews/Disbursement_Audit.listView-meta.xml
<ListView>
    <fullName>Disbursement_Audit</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Disbursement Audit</label>
</ListView>